--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
